[gd_scene load_steps=5 format=3 uid="uid://lmx4obynadxp"]

[ext_resource type="Script" path="res://plane_hud/plane_handler.gd" id="1_2mbtp"]
[ext_resource type="PackedScene" uid="uid://bu73yn45j040t" path="res://plane/biplane.tscn" id="2_c4wy8"]
[ext_resource type="PackedScene" uid="uid://bttnt1jcweusq" path="res://plane_hud/plane_display.tscn" id="2_w8jbv"]
[ext_resource type="PackedScene" uid="uid://7m20o7ilyhml" path="res://plane_hud/plane_upgrade_interface.tscn" id="4_x2lla"]

[node name="PlaneHandler" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2mbtp")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Biplane" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_c4wy8")]

[node name="PlaneDisplay" parent="." node_paths=PackedStringArray("plane") instance=ExtResource("2_w8jbv")]
layout_mode = 1
plane = NodePath("../SubViewportContainer/SubViewport/Biplane")

[node name="PlaneUpgradeInterface" parent="." instance=ExtResource("4_x2lla")]
layout_mode = 1

[connection signal="destroyed" from="SubViewportContainer/SubViewport/Biplane" to="." method="_on_biplane_destroyed"]
[connection signal="item_upgraded" from="PlaneUpgradeInterface" to="." method="_on_plane_upgrade_interface_item_upgraded"]
[connection signal="launched" from="PlaneUpgradeInterface" to="." method="_on_plane_upgrade_interface_launched"]
